--- a/Music box/Music box.csproj
+++ b/Music box/Music box.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>Music_box</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
 </Project>
