--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,5 +3,36 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": []
+    "configurations": [
+        {
+            "name": ".NET Core Launch (console)",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            "program": "${F:\\repos\\Proyecto2VeranoDatos1}/bin/Debug/<target-framework>/<project-name.dll>",
+            "args": [],
+            "cwd": "${F:\\repos\\Proyecto2VeranoDatos1}",
+            "stopAtEntry": false,
+            "console": "internalConsole",
+            "pipeTransport": {
+                "pipeCwd": "${F:\\repos\\Proyecto2VeranoDatos1}",
+                "pipeProgram": "enter the fully qualified path for the pipe program name, for example '/usr/bin/ssh'",
+                "pipeArgs": [],
+                "debuggerPath": "enter the path for the debugger on the target machine, for example ~/vsdbg/vsdbg"
+            }
+        },
+
+        {
+            "name": "C#: Proyecto2VeranoDatos1 Debug",
+            "type": "dotnet",
+            "request": "launch",
+            "projectPath": "$F:\\repos\\Proyecto2VeranoDatos1\\Proyecto2VeranoDatos1.csproj"
+        },
+        {
+            "name": ".NET Core Attach",
+            "type": "coreclr",
+            "request": "attach"
+        }
+
+    ]
 }
