--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,4 +1,19 @@
 {
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": ".NET Launch (Music box)",
+      "type": "coreclr",
+      "request": "launch",
+      "program": "${workspaceFolder}/Music box/bin/Debug/net10.0-windows/Music box.dll",
+      "args": [],
+      "cwd": "${workspaceFolder}/Music box",
+      "console": "integratedTerminal",
+      "stopAtEntry": false
+    }
+  ]
+}
+{
     // Use IntelliSense to learn about possible attributes.
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
